--- a/styles/header.css
+++ b/styles/header.css
@@ -3,7 +3,7 @@
     padding: 0%;
 }
 :root{
-    --primary-color:#0FF85B;
+    --primary-color:#fd5d00;
     ---bg-color:black;
     --text-color:white;
     --main-color:#001005;
