--- a/styles/contactsection.css
+++ b/styles/contactsection.css
@@ -26,13 +26,14 @@
     outline: none;
 }
 .contact-input{
-    border: 3px solid var(--primary-color);
+    border: 1.8px solid var(--new-color);
     border-radius: 25px;
-    width: 50%;
+    width: 590px;
     background-color: transparent;
     color: var(--primary-color);
     font-size: 25px;
     padding: 0px 10px;
+    outline: none;
 }
 .form{
     display: flex;
@@ -64,4 +65,63 @@
     border-radius: 40px;
     width: 40px;
     height: 40px;
+}
+.contact-section-inputs{
+    padding-top: 50px;
+}
+.contact-section-inputs input{
+    width: 590px;
+    height: 50px;
+    border: 1.8px solid var(--new-color);
+    font-size: 25px;
+}
+
+.name-input-div,.email-div,.Phonenumber-div,.Message{
+    position: relative;
+}
+.name-input-div span{
+    position: absolute;
+    color:var(--new-color);
+    left: 5%;
+    font-size: 25px;
+    top: 22%;
+    pointer-events: none;
+}
+.email-div span{
+    color: var(--new-color);
+    position: absolute;
+    left: 5%;
+    font-size: 25px;
+    top: 22%;
+    pointer-events: none;
+}
+.Phonenumber-div span{
+    color: var(--new-color);
+    position: absolute;
+    left: 5%;
+    font-size: 25px;
+    top: 22%;
+    pointer-events: none;
+}
+
+.Message:focus{
+    outline: none;
+
+}
+input:focus{
+    border: 2px solid var(--primary-color);
+    color: white;
+    background-color: transparent;
+}
+input:focus + span,
+input:valid +span{
+    transform: translateY(-25px);
+    background-color: var(--main-color);
+    color: var(--primary-color);
+    transition: 0.4s all ease;
+
+    margin-left: 10px;
+}
+textarea:focus{
+    border: 2px solid var(--primary-color);
 }
