color and transform changes

--- a/styles/header.css
+++ b/styles/header.css
@@ -3,7 +3,7 @@
     padding: 0%;
 }
 :root{
-    --primary-color:#19cc12;
+    --primary-color:#f7770e;
     ---bg-color:black;
     --text-color:white;
     --main-color:#001005;
